# NKFADC_Unpacker2

./: .gitignore  25Na_comp.c  CMakeLists.txt  Do_Offline.sh  KO_24_26_beam_Au.txt  KO_25_07_beam.txt  NKMESSAGE_UNLINK.C  Offline.sh  Offline_list.sh  README  README.md  Run.sh  Unpacker.cpp  setup_nkunpacker.sh.in
SAMPLE/: Sample.c  Setup.sh  Test.h  draw_h2gg_rdataframe.c  pos_Energy.c  tree_simple.c
config/: calib_0032_20251022.cal  det_map.csv  det_map.csv~20251104  det_map.csv~clover  det_map.csv~starkjr  erg_cal.csv  erg_cal.csv~  erg_cal.csv~20251106  erg_cal.csv~starkjr_pad  ref_parti.csv  seg_pos.csv  strip_pos.csv  time_offset.csv
config/DetMap/: det_map.csv~20251104
config/DetMap/KO_24_26/: det_map.csv  det_map.csv~clover  det_map.csv~starkjr
config/DetMap/KO_25_01/: det_map.csv  det_map.csv~clover  det_map.csv~starkjr
config/DetMap/KO_25_07/: det_map.csv  det_map.csv~clover
config/Energy_calibs/KO_24_26/: erg_cal.csv  erg_cal.csv~asgard~postExp  erg_cal.csv~starkjr
config/Energy_calibs/KO_25_01/: erg_cal.csv  erg_cal.csv~starkjr_20251110_ver1
config/Energy_calibs/KO_25_07/: erg_cal.csv  erg_cal.csv~asgard_20251110_ver1  erg_cal.csv~asgard_20251112_ver2  erg_cal.csv~starkjr
config/Position_Gen/: ASGARD_SegPos_to_CSV.cxx  StarkJr_StripPos_to_CSV.cxx  seg_pos.csv  strip_pos.csv
config/Position_Gen/KO_24_26/: DopplerCorr_allClover.hxx  seg_pos.csv  strip_pos.csv
config/Position_Gen/KO_25_01/: DopplerCorr_allClover.hxx  StarkJr_StripPos_to_CSV.cxx  seg_pos.csv  starkjr_position.cxx
config/Position_Gen/KO_25_07/: DopplerCorr_allClover.hxx  seg_pos.csv
config/SegPos/: DopplerCorr_allClover.hxx  README  result.csv
inc/: Config.h  DataGetter.h  Event.h  EventLinkDef.h  EventProcessor.h  EvtASGARD.h  EvtASGARDLinkDef.h  EvtSimple.h  EvtStarkJr.h  EvtStarkJrLinkDef.h  Global.h  HistServer.h  HistServerUser.h  Hit.h  HitClover.h  HitCrystal.h  HitX6.h  NKFileReader.h  NKMessageQueue.h  NKSig.h  Sig.h  SigAna.h  SigNK.h  TimeSorter.h  TreeWriter.h  TreeWriter.h~SIMPLE
src/: Config.cxx  DataGetter.cxx  Event.cxx  EventProcessor.cxx  EvtASGARD.cxx  EvtSimple.cxx  EvtStarkJr.cxx  HistServer.cxx  HistServerUser.cxx  Hit.cxx  HitClover.cxx  HitCrystal.cxx  HitX6.cxx  NKFileReader.cxx  NKMessageQueue.cxx  NKSig.cxx  Sig.cxx  SigAna.cxx  SigNK.cxx  TimeSorter.cxx  TreeWriter.cxx  TreeWriter.cxx~FULL  TreeWriter.cxx~SIMPLE
